<resources>
    <string name="app_name">ClassDiscuz</string>
    <string name="title_activity_login">Log In</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_repeat_password">Repeat password</string>
    <string name="prompt_firstname">First name</string>
    <string name="prompt_lastname">Last name</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_uncatch_password">Two passwords are not match</string>

    <string name="error_field_required">This field is required</string>

    <string name="invalid_input_title">Invalid input error</string>
    <string name="invalid_input_msg">Your have invalid inputs</string>
    <string name="invalid_input_button">Ok</string>

    <string name="input_null_title">Empty input error</string>
    <string name="input_null_msg">Your have empty inputs</string>
    <string name="input_null_button">Ok</string>

    <string name="input_long_title">Invalid input</string>
    <string name="input_long_msg">Your input is too long</string>
    <string name="input_long_button">Ok</string>

    <string name="input_short_title">Invalid input</string>
    <string name="input_short_msg">Your input is too short</string>
    <string name="input_short_button">Ok</string>

    <string name="login_fail_title">Log in failed</string>
    <string name="login_fail_msg">Please check your email and password</string>
    <string name="login_fail_button">Ok</string>

    <string name="database_fail_title">Database operation failed</string>
    <string name="database_fail_msg">Database operation failed, pelase try again</string>
    <string name="database_fail_button">Ok</string>

    <string name="addCourse_success_title">Success</string>
    <string name="addCourse_success_msg">You have registered the course successfully</string>
    <string name="addCourse_success_button">Ok</string>

    <string name="dropCourse_success_title">Success</string>
    <string name="dropCourse_success_msg">You have dropped the course successfully</string>
    <string name="dropCourse_success_button">Ok</string>

    <string name="updateProfile_success_title">Success</string>
    <string name="updateProfile_success_msg">You have updated your profile successfully</string>
    <string name="updateProfile_success_button">Ok</string>

    <string name="no_course_title">No such course</string>
    <string name="no_course_msg">No such course in database, please change your input</string>
    <string name="no_course_button">Ok</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_self_profile">Profile</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_focus">Focus</string>
    <string name="section_format">Hello World from section: %1$d</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="sun">Sunday</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>

    <string name="time12am">12 am</string>
    <string name="time1am">1 am</string>
    <string name="time2am">2 am</string>
    <string name="time3am">3 am</string>
    <string name="time4am">4 am</string>
    <string name="time5am">5 am</string>
    <string name="time6am">6 am</string>
    <string name="time7am">7 am</string>
    <string name="time8am">8 am</string>
    <string name="time9am">9 am</string>
    <string name="time10am">10 am</string>
    <string name="time11am">11 am</string>
    <string name="time12pm">12 pm</string>
    <string name="time1pm">1 pm</string>
    <string name="time2pm">2 pm</string>
    <string name="time3pm">3 pm</string>
    <string name="time4pm">4 pm</string>
    <string name="time5pm">5 pm</string>
    <string name="time6pm">6 pm</string>
    <string name="time7pm">7 pm</string>
    <string name="time8pm">8 pm</string>
    <string name="time9pm">9 pm</string>
    <string name="time10pm">10 pm</string>
    <string name="time11pm">11 pm</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="AvatarUploadDialogTitle">Upload avatar</string>
    <string name="AvatarUploadDialogOption1">Take a photo from camera</string>
    <string name="AvatarUploadDialogOption2">Upload from gallery</string>
    <string name="AvatarUploadDialogOption3">Cancel</string>

</resources>
